--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -26,13 +26,13 @@
             <span class="cs-header">Our Services</span>
             <ul class="cs-ul">
                 <li class="cs-li">
-                    <a class="cs-link" href="">Couples Therapy</a>
+                    <a class="cs-link" href="/services">Couples Therapy</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="">Individual Therapy</a>
+                    <a class="cs-link" href="/services">Individual Therapy</a>
                 </li>
                 <li class="cs-li">
-                    <a class="cs-link" href="">Family Therapy</a>
+                    <a class="cs-link" href="/services">Family Therapy</a>
                 </li>
             </ul>
         </div>
