--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -10,6 +10,7 @@
         position: relative;
 
         .cs-container {
+            padding-top: 100px;
             width: 100%;
             max-width: (1280/16rem);
             margin: auto;
