--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -49,6 +49,9 @@
                     <a class="cs-link" href="/contact">Contact Us</a>
                 </li>
                 <li class="cs-li">
+                    <a class="cs-link" href="/blog">Blog</a>
+                </li>
+                <li class="cs-li">
                     <a class="cs-link" href="/schedule">Free Consultation</a>
                 </li>
             </ul>
