--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -11,6 +11,15 @@ eleventyComputed:
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/blog.css">
+       <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-47SC5QRPEQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-47SC5QRPEQ');
+</script>
 {% endblock %}
 
 {% block body %}
