--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -10,6 +10,10 @@
             <p class="cs-text">
                 Marriage or relationship counselor in Murrieta, California. Serving Murrieta and the surrounding communities.
             </p>
+            <div class="cs-contact-info">
+                <span class="cs-topper">Couples Therapy Near Me</span>
+                <a href="https://murrietatherapy.com/couples-therapy-murrieta" class="cs-contact-link">Couples Therapy Murrieta</a>
+            </div>
             <div class="cs-contact">
                 <div class="cs-contact-info">
                     <span class="cs-topper">Call Us Anytime</span>
