--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -95,7 +95,7 @@
     </div>
     <div class="cs-bottom">
         <span class="cs-credit">
-            © Copyright 2024 - <a href="/" class="cs-credit-link" target="_blank">Lakes Therapy and Counseling Center</a> - <a href="https://coloradospringswebdesigns.com" class="cs-credit-link" target="_blank">Hand-Coded by Colorado Springs Web Designs</a>
+            © Copyright 2024 - <a href="/" class="cs-credit-link">Lakes Therapy and Counseling Center</a> - <a href="https://coloradospringswebdesigns.com" class="cs-credit-link" target="_blank">Hand-Coded by Colorado Springs Web Designs</a>
         </span>
         <div class="cs-bottom-links">
             <a href="/terms" class="cs-bottom-link">Terms & Conditions</a>
