--- a/src/assets/less/location.less
+++ b/src/assets/less/location.less
@@ -1743,7 +1743,7 @@
         }
 
         .cs-card-group {
-            width: 80%;
+            width: 100%;
             margin: 0;
             padding: 0;
             display: grid;
@@ -1781,7 +1781,7 @@
         }
 
         .cs-picture {
-            width: 100%;
+            width: 80%%;
             height: (240/16rem);
             margin-bottom: (24/16rem);
             background-color: #000;
