--- a/src/assets/less/location.less
+++ b/src/assets/less/location.less
@@ -1706,7 +1706,7 @@
         .cs-content {
             /* set text align to left if content needs to be left aligned */
             text-align: left;
-            width: 80%%;
+            width: 100%;
             display: flex;
             flex-direction: column;
             /* centers content horizontally, set to flex-start to left align */
