--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -187,10 +187,53 @@
             }
         }
 
-        .cs-textarea {
-            min-height: (150/16rem);
-            padding-top: (10/16rem);
-        }
+            input,
+            textarea {
+                font-size: (16/16rem);
+                width: 100%;
+                height: (64/16rem);
+                margin-top: (4/16rem);
+                /* prevents border & padding from affecting height */
+                box-sizing: border-box;
+                padding-left: (20/16rem);
+                border: 1px solid #b4b2c7;
+                border-radius: (8/16rem);
+                transition: border 0.3s;
+
+                &:hover {
+                    border: 1px solid var(--primary);
+                }
+            }
+
+            textarea {
+                font-family: inherit;
+                min-height: (120/16rem);
+                padding-top: (20/16rem);
+            }
+
+            input,
+            textarea {
+                font-size: (16/16rem);
+                width: 100%;
+                height: (64/16rem);
+                margin-top: (4/16rem);
+                /* prevents border & padding from affecting height */
+                box-sizing: border-box;
+                padding-left: (20/16rem);
+                border: 1px solid #b4b2c7;
+                border-radius: (8/16rem);
+                transition: border 0.3s;
+
+                &:hover {
+                    border: 1px solid var(--primary);
+                }
+            }
+
+            textarea {
+                font-family: inherit;
+                min-height: (120/16rem);
+                padding-top: (20/16rem);
+            }    
 
         .cs-button-solid {
             font-size: (16/16rem);
