--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -228,7 +228,10 @@
             }
         }
 
-
+        .cs-label-message2 {
+            /* 32px - 48px */
+            margin-bottom: clamp(2rem, 6.3vw, 3rem);
+        }
 
         .cs-button-solid {
             /* button override */
