--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -144,6 +144,12 @@
             row-gap: (20/16rem);
         }
 
+        textarea {
+            font-family: inherit;
+            min-height: (120/16rem);
+            padding-top: (20/16rem);
+        }
+
         .cs-h3 {
             /* 20px - 31px */
             font-size: clamp(1.25rem, 4vw, 1.9375rem);
@@ -168,7 +174,6 @@
         }
 
         .cs-input,
-        .cs-textarea,
         #cs-select-485 {
             font-size: (16/16rem);
             font-family: inherit;
@@ -187,7 +192,6 @@
             }
         }
         
-   
 
         .cs-button-solid {
             font-size: (16/16rem);
