--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -174,6 +174,7 @@
         }
 
         .cs-input,
+        .cs-textarea,
         #cs-select-485 {
             font-size: (16/16rem);
             font-family: inherit;
