--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -144,7 +144,7 @@
             row-gap: (20/16rem);
         }
 
-        textarea {
+        .cs-textarea {
             font-family: inherit;
             min-height: (120/16rem);
             padding-top: (20/16rem);
