--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -187,6 +187,7 @@
         .cs-textarea {
             min-height: (100/16rem);
             padding-top: (10/16rem);
+            justify-content: top;
         }
 
         .cs-button-solid {
