--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -165,7 +165,6 @@
         }
 
         .cs-input,
-        .cs-textarea,
         #cs-select-485 {
             font-size: (16/16rem);
             font-family: inherit;
@@ -187,7 +186,21 @@
         .cs-textarea {
             min-height: (100/16rem);
             padding-top: (10/16rem);
-            justify-content: top;
+            justify-content: left;
+            font-size: (16/16rem);
+            font-family: inherit;
+            width: 100%;
+            margin: 0;
+            padding: 0 (20/16rem);
+            /* prevents padding from affecting width and height */
+            box-sizing: border-box;
+            border-radius: (8/16rem);
+            border: 1px solid #b4b2c7;
+            background-color: transparent;
+            &::placeholder {
+                color: #7d799c;
+                font-size: (16/16rem);
+            }
         }
 
         .cs-button-solid {
