--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -187,6 +187,7 @@
             min-height: (100/16rem);
             padding-top: (10/16rem);
             font-size: (16/16rem);
+            font-family: inherit;
             width: 100%;
             margin: 0;
             padding: 0 (20/16rem);
