--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -189,8 +189,7 @@
             font-family: inherit;
             width: 100%;
             margin: 0;
-            padding-top: 25px;
-            padding-left: 25px;
+            padding: 20px;
             /* prevents padding from affecting width and height */
             box-sizing: border-box;
             border-radius: (8/16rem);
