--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -6,6 +6,7 @@
 @media only screen and (min-width: 0rem) {
     #cs-contact-485 {
         padding: var(--sectionPadding);
+        margin-top: 20px;
         position: relative;
         z-index: 1;
 
