--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -59,8 +59,8 @@ eleventyComputed:
                         <!--Author Image-->
                         <picture class="blog-author-img">
                             <img
-                            src="/assets/svgs/profile.svg"
-                            alt="house"
+                            src="https://murrieta-therapy.b-cdn.net/John%20Bacon%20Gilbert_2.webp"
+                            alt="John Bacon Gilbert"
                             width="32"
                             height="32"
                             decoding="async">
