--- a/src/feed.njk
+++ b/src/feed.njk
@@ -4,7 +4,7 @@
   "eleventyExcludeFromCollections": true,
   "metadata": {
     "title": "Lakes Therapy and Counseling Center Blog",
-    "subtitle": "Read helpful articles and guides about coupels therapy, marriage counseling, and Lakes Therapy and Counseling Center in Murrieta, CA",
+    "subtitle": "Read helpful articles and guides about couples therapy, marriage counseling, and Lakes Therapy and Counseling Center in Murrieta, CA",
     "language": "en",
     "url": "https://murrietatherapy.com/",
     "author": {
