--- a/src/feed.njk
+++ b/src/feed.njk
@@ -27,6 +27,9 @@
     <item>
       <title>{{ post.data.title }}</title>
       <link>{{ absolutePostUrl }}</link>
+      <image>
+          <url>{{ post.data.image }}</url>
+      </image>    
       <description>{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</description>
       <pubDate>{{ post.date | dateToRfc822 }}</pubDate>
       <dc:creator>{{ metadata.author.name }}</dc:creator>
