--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -10,7 +10,10 @@ eleventyComputed:
 {% extends "layouts/base.html" %}
 
 {% block head %}
-    <link rel="stylesheet" href="/assets/css/blog.css">
+<link rel="stylesheet" href="/assets/css/blog.css">
+
+<meta property="og:image" content="{{ post.data.image }}" />
+
        <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-47SC5QRPEQ"></script>
 <script>
