--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="{{ description }}">
-        <meta name="keywords" content="">
+        <meta name="keywords" content="Murrieta Couples Therapy">
         <link rel="canonical" href="{{ client.domain }}{{ page.url }}">
 
         <!--Social Media Display-->
@@ -28,7 +28,7 @@
         <meta name="theme-color" content="#ffffff">
 
         <!-- Preloads -->
-        <link rel="preload" as="image" href="/assets/svgs/logo-white.svg">
+        <link rel="preload" as="image" href="https://murrieta-therapy.b-cdn.net/LTCS-Logo.png">
         <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
         <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
 
