--- a/src/_includes/layouts/post.html
+++ b/src/_includes/layouts/post.html
@@ -12,6 +12,31 @@ eleventyComputed:
 {% block head %}
 <link rel="stylesheet" href="/assets/css/blog.css">
 
+<!-- JSON Blog Schema Markup -->
+<script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "headline": "{{ title }}",
+    "image": [
+        "{{ image }}"
+    ],
+    "datePublished": "{{ date | postDate }}",
+    "publisher": {
+        "@type": "Organization",
+        "name": "{{ client.name }}"
+    },
+    "author": [{
+        "@type": "Person",
+        "name": "{{ author }}"        
+        }],
+    
+    "articleBody": "{{ description | safe }}",
+    "url": "{{ client.domain }}{{ page.url }}",
+    "articleSection": "{{ tags }}"
+    }
+</script>
+
        <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-47SC5QRPEQ"></script>
 <script>
