--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -72,7 +72,7 @@
               "@context": "https://schema.org",
               "@type": "LocalBusiness",
               "name": "Lakes Therapy and Counseling Center",
-              "image": "https://murrietatherapy.com/wp-content/uploads/2021/05/cropped-logo.png",
+              "image": "https://murrieta-therapy.b-cdn.net/Square-Logo.png",
               "@id": "https://murrietatherapy.com/",
               "url": "https://murrietatherapy.com/",
               "telephone": "(951) 417-5443",
