--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -9,6 +9,7 @@
     #meet-team-1141 {
         padding: var(--sectionPadding);
         overflow: hidden;
+        margin-top: 10vh;
 
         .cs-container {
             width: 100%;
