--- a/src/assets/less/faqpage.less
+++ b/src/assets/less/faqpage.less
@@ -9,6 +9,7 @@
     #faq-1720 {
         padding: var(--sectionPadding);
         position: relative;
+        margin-top: 10vh;
 
         .cs-container {
             width: 100%;
