--- a/src/assets/css/faqpage.css
+++ b/src/assets/css/faqpage.css
@@ -7,6 +7,7 @@
   #faq-1720 {
     padding: var(--sectionPadding);
     position: relative;
+    margin-top: 10vh;
   }
   #faq-1720 .cs-container {
     width: 100%;
