--- a/src/assets/less/insurance.less
+++ b/src/assets/less/insurance.less
@@ -5,6 +5,7 @@
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
     #sbsr-1444 {
+        margin-top: 10vh;
         padding: var(--sectionPadding);
         overflow: hidden;
 
