--- a/src/assets/less/insurance.less
+++ b/src/assets/less/insurance.less
@@ -156,6 +156,7 @@
 
         .cs-picture {
             width: 100%;
+            margin-top: -7vh;
             max-width: (650/16rem);
             min-height: (362/16rem);
             border-radius: (24/16rem);
