--- a/src/assets/css/insurance.css
+++ b/src/assets/css/insurance.css
@@ -140,6 +140,7 @@
   }
   #sbsr-1444 .cs-picture {
     width: 100%;
+    margin-top: -7vh;
     max-width: 40.625rem;
     min-height: 22.625rem;
     border-radius: 1.5rem;
