--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -62,6 +62,7 @@
 
         gtag('config', 'G-47SC5QRPEQ');
         </script>
+        <meta name="google-site-verification" content="MxoJ9qRmgd4TsxhsVdVwdaNpFBr2D8oyhuG4UfXSPJc" />
 
 <script type="application/ld+json">
   {
