--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -26,7 +26,7 @@
             overflow: hidden;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: left;
             align-items: center;
             gap: (48/16rem);
             position: relative;
