--- a/src/assets/less/schedule.less
+++ b/src/assets/less/schedule.less
@@ -26,8 +26,8 @@
             overflow: hidden;
             display: flex;
             flex-direction: column;
-            justify-content: left;
-            align-items: center;
+            justify-content: center;
+            align-items: left;
             gap: (48/16rem);
             position: relative;
             z-index: 1;
