--- a/src/assets/less/insurance.less
+++ b/src/assets/less/insurance.less
@@ -170,7 +170,7 @@
                 width: 100%;
                 height: 100%;
                 display: block;
-                position: absolute;
+                position: center;
                 top: 0;
                 left: 0;
                 object-fit: cover;
