--- a/src/assets/less/insurance.less
+++ b/src/assets/less/insurance.less
@@ -159,7 +159,7 @@
             margin-top: 0vh;
             max-width: (650/16rem);
             min-height: (362/16rem);
-        
+            align-items: center;
             /* clips img tag corners */
             overflow: hidden;
             display: block;
