--- a/src/assets/less/insurance.less
+++ b/src/assets/less/insurance.less
@@ -28,7 +28,7 @@
             width: 100%;
             max-width: (542/16rem);
             display: flex;
-            flex-direction: column;
+            flex-direction: column-reverse;
             /* centers content horizontally, set to flex-start to left align */
             align-items: flex-start;
         }
