--- a/src/assets/less/insurance.less
+++ b/src/assets/less/insurance.less
@@ -15,7 +15,7 @@
             max-width: (550/16rem);
             margin: auto;
             display: flex;
-            flex-direction: column-reverse;
+            flex-direction: column;
             align-items: center;
             /* 48px - 64px */
             gap: clamp(3rem, 6vw, 4rem);
