--- a/src/assets/less/insurance.less
+++ b/src/assets/less/insurance.less
@@ -157,8 +157,8 @@
         .cs-picture {
             width: 100%;
             margin-top: 10vh;
-            max-width: (650/16rem);
-            min-height: (362/16rem);
+            max-width: (375);
+            min-height: (320);
             align-items: center;
             /* clips img tag corners */
             overflow: hidden;
