--- a/src/assets/less/insurance.less
+++ b/src/assets/less/insurance.less
@@ -157,8 +157,8 @@
         .cs-picture {
             width: 100%;
             margin-top: 10vh;
-            max-width: (375);
-            min-height: (320);
+            max-width: 375px;
+            min-height: 320px;
             align-items: center;
             /* clips img tag corners */
             overflow: hidden;
