--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="cs-contact-info">
                     <span class="cs-topper">Visit Our Location</span>
-                    <a href="https://maps.app.goo.gl/tVq1mUXpnkQbvYyM8" class="cs-contact-link">41856 Ivy St STE 205, Murrieta, CA 92562</a>
+                    <a href="https://maps.app.goo.gl/tVq1mUXpnkQbvYyM8" class="cs-contact-link">41197 Golden Gate Cir, STE 203, Murrieta, CA 92562</a>
                 </div>
                 <div class="cs-contact-info">
                     <span class="cs-topper">Couples Therapy Near Me</span>
